--- a/src/main/resources/static/app/Templates/templateDoctor.html
+++ b/src/main/resources/static/app/Templates/templateDoctor.html
@@ -13,7 +13,7 @@
         <!-- /.navbar-header -->
 
         <ul class="nav navbar-top-links navbar-right">
-            <li><a ng-click="continueLogoutD()"><i class="fa fa-sign-out fa-fw"></i> Cerrar Sesión</a>
+            <li><a ng-controller="general" ng-click="logout()"><i class="fa fa-sign-out fa-fw"></i> Cerrar Sesión</a>
             </li>
         </ul>
         <!-- /.navbar-top-links -->
