--- a/src/main/resources/static/app/Templates/templatePatient.html
+++ b/src/main/resources/static/app/Templates/templatePatient.html
@@ -15,7 +15,7 @@
         <ul class="nav navbar-top-links navbar-right">
             <li><a ng-click="continuePerfil()"><i class="fa fa-user fa-fw"></i> Perfil </a>
             </li>
-            <li><a ng-click="continueLogout()"><i class="fa fa-sign-out fa-fw"></i> Cerrar Sesión</a>
+            <li><a ng-controller="general" ng-click="logout()"><i class="fa fa-sign-out fa-fw"></i> Cerrar Sesión</a>
             </li>
         </ul>
         <!-- /.navbar-top-links -->
