--- a/src/main/resources/static/app/Templates/templateDoctor.html
+++ b/src/main/resources/static/app/Templates/templateDoctor.html
@@ -13,6 +13,8 @@
         <!-- /.navbar-header -->
 
         <ul class="nav navbar-top-links navbar-right">
+            <li><a ng-click="continueDoctorProfile()"><i class="fa fa-user fa-fw"></i> Perfil </a>
+            </li>
             <li><a ng-controller="general" ng-click="logout()"><i class="fa fa-sign-out fa-fw"></i> Cerrar Sesión</a>
             </li>
         </ul>
